trunk/Archive2/13/593766a4b81696/output
main.cpp:71:5: error: 'Packet::Packet(const char*, const char*, const nanoseconds&)' cannot be overloaded
     Packet(const char* b, const char* e, const std::chrono::nanoseconds& inTimestamp) :
     ^
main.cpp:57:5: error: with 'Packet::Packet(const char*, const char*, const nanoseconds&)'
     Packet(const char* b, const char* e, const std::chrono::nanoseconds& inTimestamp) :
     ^
